--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     region: oregon
     plan: free
     branch: main
-    buildCommand: "pip install -r requirements.txt && apt-get update && apt-get install -y ffmpeg"
+    buildCommand: "./render-build.sh"
     startCommand: "uvicorn main:app --host 0.0.0.0 --port $PORT"
     envVars:
       - key: PYTHON_VERSION
