--- a/render.yaml
+++ b/render.yaml
@@ -8,3 +8,5 @@ services:
     buildCommand: "./render-build.sh"
     startCommand: "uvicorn main:app --host 0.0.0.0 --port $PORT"
     autoDeploy: true
+    aptPackages:
+      - ffmpeg
